<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roundedrectangle_pausebackground">

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/pause_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeup"
        android:textColor="@color/primary_yellow"
        android:textSize="@dimen/_28sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_15sdp"/>

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_adsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="Test Ad"
        android:textColor="@color/primary_orange"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pause_title" />

    <com.facebook.ads.AdIconView
        android:id="@+id/game_end_adsImageView"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_end_adsTitle" />

    <RelativeLayout
        android:id="@+id/game_end_adsChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/game_end_adsImageView"
        app:layout_constraintBottom_toTopOf="@id/game_end_adsImageView"
        app:layout_constraintStart_toEndOf="@id/game_end_adsImageView" />

    <TextView
        android:id="@+id/game_end_adLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/adflowericon"
        android:padding="@dimen/_6sdp"
        android:text="Ad"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/game_end_adsImageView"
        app:layout_constraintEnd_toStartOf="@+id/game_end_adsImageView"
        app:layout_constraintStart_toStartOf="@+id/game_end_adsImageView"
        app:layout_constraintTop_toTopOf="@+id/game_end_adsImageView" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_adsCTAButton"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/shop_buynow_selector"
        android:gravity="center"
        android:text="Download Now"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:visibility="gone"
        app:autoSizeMaxTextSize="@dimen/_18sdp"
        app:autoSizeMinTextSize="@dimen/_8sdp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_end_adsImageView" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_restartButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center|top"
        android:paddingLeft="@dimen/_10sdp"
        android:text="@string/restart"
        android:textColor="@color/endgame_textcolor"
        android:textSize="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_end_correctwords" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_exitButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center|top"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/exit"
        android:textColor="@color/endgame_textcolor"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/game_end_restartButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/yourscore"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_end_adsCTAButton" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_higheststreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/higheststreak"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_end_score" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_hintsused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hintsused"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_end_higheststreak" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_skips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/skips"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_end_hintsused" />

    <com.ganwl.multiplayerwordgame.helper.CustomTextView
        android:id="@+id/game_end_correctwords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/correctwords"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_end_skips" />
</android.support.constraint.ConstraintLayout>